<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculator.MainActivity" >

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:singleLine="true"
        android:text="@string/calculatorName"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/showView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_background"
        android:gravity="end|center_vertical"
        android:maxLength="18"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:text="@string/clear"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_background"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:text="@string/back"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/three"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/plus"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/six"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/minus"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/nine"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/multiply"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_point"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/point"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/equal"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/divide"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>